knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/pqcrush__White_Space__c.object-meta.xml
<CustomObject>
    <label>White Space</label>
    <nameField>
        <label>White Space Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>White Spaces</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>