knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__AreCellsFiltered__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__AreCellsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Determines whether cell data is populated based on having a parent relationship to the Account</description>
    <label>Filter Cells</label>
    <type>Checkbox</type>
</CustomField>