knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__AreRowsFiltered__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__AreRowsFiltered__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Filter Rows</label>
    <type>Checkbox</type>
</CustomField>