knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__Cell_Max_LMD__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Cell_Max_LMD__c</fullName>
    <description>The most recently modified date for all the Cells related to this Cross Sell Report</description>
    <inlineHelpText>Used in the account plan score - If you are not using a freeform whitespace, this value is not likely to change much</inlineHelpText>
    <label>Cell Max Modified Date</label>
    <summarizedField>pqcrush__White_Space_Cell__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>pqcrush__White_Space_Cell__c.pqcrush__White_Space__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>