knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__Threshold__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Threshold__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Threshold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>