knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__Threshold_Amount_Type__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Threshold_Amount_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Threshold Amount Type</label>
    <referenceTo>pqcrush__White_Space_Amount_Type__c</referenceTo>
    <relationshipLabel>White Spaces</relationshipLabel>
    <relationshipName>White_Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>