knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__White_Space_Template__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__White_Space_Template__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Cross-Sell Template</label>
    <referenceTo>pqcrush__White_Space_Template__c</referenceTo>
    <relationshipLabel>Cross-Sell Maps</relationshipLabel>
    <relationshipName>White_Spaces</relationshipName>
    <type>Lookup</type>
</CustomField>