knowledge/metadata/sf-pp-main-qa/sf-pp-main-qa/force-app/main/default/objects/pqcrush__White_Space__c/fields/pqcrush__Whitespace_Cell_Count__c.field-meta.xml
<CustomField>
    <fullName>pqcrush__Whitespace_Cell_Count__c</fullName>
    <label>Whitespace Cell Count</label>
    <summaryForeignKey>pqcrush__White_Space_Cell__c.pqcrush__White_Space__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>